[workspace]
members = [
    ".",
    "example_mod",
    "voxel_engine_types"
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Internal dependencies
example_mod = { path = "example_mod", version = "0.1.0" }
voxel_engine = { path = ".", version = "0.1.0" }
voxel_engine_types = { path = "voxel_engine_types", version = "0.1.0" }

# External dependencies
wings = { version = "0.1.3", default-features = false }

[package]
name = "voxel_engine"
edition.workspace = true
version.workspace = true

[dependencies]
voxel_engine_types.workspace = true