[workspace]
members = [
    ".",
    "example_mod", "voxel_engine_macros",
    "voxel_engine_types"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
description = "Public API for the Octo voxel game engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DouglasDwyer/voxel_engine"


[workspace.dependencies]
# Internal dependencies
example_mod = { path = "example_mod" }
voxel_engine = { path = ".", version = "0.1.0" }
voxel_engine_macros = { path = "voxel_engine_macros", version = "0.1.0" }
voxel_engine_types = { path = "voxel_engine_types", version = "0.1.0" }

# External dependencies
bytemuck = { version = "1.16.3", default-features = false, features = [ "derive" ] }
egui_demo_lib = { version = "0.28.1", default-features = false }
egui_wings = { version = "0.1.4", default-features = false }
glam = { version = "0.29.0", default-features = false, features = [ "bytemuck", "serde", "std" ] }
quote = { version = "1.0.35", default-features = false }
serde = { version = "1.0.205", default-features = false }
toml = { version = "0.8.19", default-features = false }
wasset = { version = "0.1.2", default-features = false }
wings = { version = "0.1.5", default-features = false }

[package]
name = "voxel_engine"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
egui_wings = { workspace = true, optional = true }
voxel_engine_macros.workspace = true
voxel_engine_types.workspace = true

[features]
# Enables drawing UI with `egui`
egui = [ "dep:egui_wings", "voxel_engine_types/egui" ]

# Enables reading config TOML files using the `toml` crate
toml = [ "voxel_engine_types/toml" ]

[package.metadata."docs.rs"]
all-features = true