cargo-features = ["per-package-target"]

[package]
name = "example_mod"
edition.workspace = true
version.workspace = true
forced-target = "wasm32-wasip1"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
egui_demo_lib.workspace = true
serde.workspace = true
voxel_engine = { workspace = true, features = [ "egui", "toml" ] }
wings.workspace = true