[package]
name = "voxel_engine_types"
edition.workspace = true
version.workspace = true

[dependencies]
bytemuck.workspace = true
egui_wings = { workspace = true, optional = true }
glam.workspace = true
serde.workspace = true
toml = { workspace = true, optional = true }
wasset.workspace = true
wings.workspace = true

[features]
egui = [ "dep:egui_wings" ]
toml = [ "dep:toml", "toml/parse" ]